# verbose_csrf_middleware

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
example_django_project/example_django_project/: settings.py
verbose_csrf_middleware/: __init__.py  tests.py
